added add activity and its layout, logged addBtn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Audiobook Saver</string>
-    <string name="addBtn">Add</string>
+    <string name="addBtn">Confirm</string>
 </resources>
